# cybershuttle-tune

./: .gitignore  README.md  pyproject.toml
cybershuttle_tune/: airavata_operator.py  param_types.py  parser.py  sdk.py  sweeper.py
cybershuttle_tune/cli/: auth.py  main.py
examples/cli/: README.md
examples/cli/inputs/: network.cfg  params.txt
examples/notebook/: README.md  settings.ini  sweep_example.ipynb
examples/notebook/.ipynb_checkpoints/: cstune_example-checkpoint.ipynb
examples/notebook/inputs/: inputs.ini
