[tool.poetry]
name = "cybershuttle-tune"
version = "0.1.3"
description = "Parameter Tunning Library for CyberShuttle"
authors = [
    "Dimuthu Wannipurage <dimuthuw@gatech.edu>",
]
maintainers = [
    "Apache Airavata Developers <dev@apache.airavata.org>",
]
readme = "README.md"
homepage = "https://github.com/cyber-shuttle/cybershuttle-tune"
license = "Apache-2.0"
keywords = ["CyberShuttle", "Prameter Tunning", "Parameter Sweeping"]

[tool.poetry.scripts]
cstune = "cybershuttle_tune.cli.main:app"

[tool.poetry.dependencies]
python = "^3.10"
typer = {extras = ["all"], version = "^0.7.0"}
pick = {version= "2.2.0"}
pandas = "^2.0.3"
jinja2 = "^3.1.2"
airavata-python-sdk = "^1.1.7"
thrift-connector = "^0.24"
thrift = "^0.16.0"
requests-oauthlib = "^1.3.1"
pyjwt = "^2.8.0"
paramiko = "^3.3.1"
scp = "^0.14.5"
tabulate = "^0.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"